fixed maps/other info headers width on squish

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -176,7 +176,7 @@ p.copyright {
 .contentTopLeft { width:58%; float:left;}
 .contentTopRight { width:42%; float:left; text-align:right; margin-bottom:5px;}
 .topRightIcons {float:right; margin-left:8px;}
-.contentMaps {width:50%; float:left;}
+.contentMaps {width:50%; float:left; min-width:250px; min-width:250px;}
 .contentReports {width:50%; float:left;}
 .fadatabase {color:#F90;}
 .fauser {color:#F09;}
@@ -185,6 +185,12 @@ p.copyright {
 .topRightIcons span {font-size:.8em;}
 .contentMaps {float:left;min-width:250px;}
 .contentReports {float:left;min-width:250px;}
+
+@media(max-width:545px) {
+	.contentMaps {width:100%;}
+	.contentReports {width:100%;}
+}
+
 
 .mapsHeader {
 	color:white;
